--- a/mygcs2/src/main/AndroidManifest.xml
+++ b/mygcs2/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".YoutubePlayer" android:theme="@android:style/Theme.Dialog" />
+        <activity android:name=".PlayerActivity" android:theme="@android:style/Theme.Dialog" />
         <activity
             android:name=".MainActivity"
             android:screenOrientation="landscape">
